tests/baselines/reference/interfaceWithImplements1.errors.txt
==== tests/cases/compiler/interfaceWithImplements1.ts (1 errors) ====
    interface IFoo { }
    
    interface IBar implements IFoo {
                   ~~~~~~~~~~~~~~~
!!! interfaceWithImplements1.ts(3,16): error TS1032: Interface declaration cannot have 'implements' clause.
    }